--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
              </section>
 
                <!-- about -->
-            <section id="about" class="w-full pb-[50px]  xl:pb-0 h-auto relative flex items-center">
+            <section id="about" class="w-full pb-[50px]  xl:pb-0 h-auto relative flex items-center overflow-hidden">
 
                   <!-- background -->
                   <div class="bg_texture absolute left-0 top-0">
@@ -371,7 +371,7 @@
              </section>
 
              <!-- footer -->
-              <footer class=" w-full h-[500px] xl:h-[667px] relative flex justify-center items-center flex-col gap-10 xl:gap-[5rem] text-center px-[2rem]">
+              <footer class=" w-full h-[500px] xl:h-[667px] relative flex justify-center items-center flex-col gap-10 xl:gap-[5rem] text-center px-[2rem] overflow-hidden">
 
                 <div class="bg_texture absolute left-0 top-0">
                     <img src="./assets/images/texture.png" alt="" class="w-full h-full object-cover opacity-5">
