--- a/index.html
+++ b/index.html
@@ -365,18 +365,30 @@
                 <!-- image -->
                  <div class="images z-0 absolute w-full h-full flex items-center justify-center left-0 top-0">
 
-                    <img src="./assets/images/how_to_buy_circle1.png" alt="how_to_buy" class="max-[400px]:w-[120px] w-[145px] lg:w-[400px] min-[2000px]:w-[500px] h-auto rounded-full absolute right-[-7%] min-[2000px]:right-[-5vw] top-[10%]">
+                    <img src="./assets/images/how_to_buy_circle1.png" alt="how_to_buy" class="max-[400px]:w-[120px] w-[145px] lg:w-[400px] min-[2000px]:w-[500px] h-auto rounded-full absolute right-[-7%] min-[2000px]:right-[-5vw] top-[10%]" data-aos="zoom-in"
+                    data-aos-duration="1000"
+                    data-aos-delay="200">
 
-                     <img src="./assets/images/how_to_buy_circle2.png" alt="how_to_buy" class="max-[400px]:w-[120px] w-[165px] lg:w-[300px] min-[2000px]:w-[400px] h-auto rounded-full absolute left-[-7%] min-[2000px]:left-[-5vw] top-[28%] xl:top-[30%]">
+                     <img src="./assets/images/how_to_buy_circle2.png" alt="how_to_buy" class="max-[400px]:w-[120px] w-[165px] lg:w-[300px] min-[2000px]:w-[400px] h-auto rounded-full absolute left-[-7%] min-[2000px]:left-[-5vw] top-[28%] xl:top-[30%]" data-aos="zoom-in"
+                     data-aos-duration="1000"
+                     data-aos-delay="300">
 
-                     <img src="./assets/images/how_to_buy_circle3.png" alt="how_to_buy" class="max-[400px]:w-[120px] w-[185px] lg:w-[300px] min-[2000px]:w-[400px] h-auto rounded-full absolute max-[500px]:right-[-5%] right-0 xl:right-[3%] min-[2000px]:right-[5vw] top-[47%] xl:top-[55%]">
+                     <img src="./assets/images/how_to_buy_circle3.png" alt="how_to_buy" class="max-[400px]:w-[120px] w-[185px] lg:w-[300px] min-[2000px]:w-[400px] h-auto rounded-full absolute max-[500px]:right-[-5%] right-0 xl:right-[3%] min-[2000px]:right-[5vw] top-[47%] xl:top-[55%]" data-aos="zoom-in"
+                     data-aos-duration="1000"
+                     data-aos-delay="400">
 
-                     <img src="./assets/images/how_to_buy_img.png" alt="how_to_buy" class="absolute bottom-[-28vw] md:bottom-[-17%] w-[70%] xl:w-[840px]">
+                     <div class=" absolute bottom-[-28vw] md:bottom-[-17%]" data-aos="fade-up"
+                     data-aos-duration="1000"
+                     data-aos-delay="200">
+                        <img src="./assets/images/how_to_buy_img.png" alt="how_to_buy" class="relative w-[70%] xl:w-[840px] zoom_outIn_image " >
+                     </div>
 
                  </div>
 
                  <!-- title -->
-                  <h1 class="bold_stroke text-center text-[12vw] xl:text-[67px] text-[#A0FF00] collage_font">How to buy</h1>
+                  <h1 class="bold_stroke text-center text-[12vw] xl:text-[67px] text-[#A0FF00] collage_font relative z-10" data-aos="fade-up"
+                  data-aos-duration="1000"
+                  data-aos-delay="200">How to buy</h1>
 
                   <!-- roadmap -->
                    <div class="roadmap  relative max-w-[1350px] w-full flex flex-col items-center max-xl:text-center  text-[#A3C8BE] h-auto xl:h-2/3 max-xl:gap-[10px] mt-[50px] xl:mt-[100px]">
@@ -386,7 +398,9 @@
 
                         <img src="./assets/images/how1.png" alt="howto" class="w-[40%] md:w-[200px] h-auto object-contain">
 
-                        <div class=" w-[80%] md:w-[554px] h-auto relative flex flex-col gap-4 xl:gap-7">
+                        <div class=" w-[80%] md:w-[554px] h-auto relative flex flex-col gap-4 xl:gap-7" data-aos="fade-left"
+                        data-aos-duration="1000"
+                        data-aos-delay="200">
                             <h3 class="text-[32px] text-white thin_stroke collage_font">Create a <span class="text-[#A0FF00]">Wallet</span></h3>
                             <p class="w-full text-[18px] lg:text-[22px]">download metamask or your wallet of choice from the app store or google play store for free. Desktop users, download the google chrome extension by going to metamask.io.</p>
                         </div>
@@ -401,7 +415,9 @@
 
                             <img src="./assets/images/how2.png" alt="howto" class="w-[40%] md:w-[200px] h-auto object-contain">
     
-                            <div class=" w-[80%] md:w-[554px] h-auto relative flex flex-col gap-4 xl:gap-7">
+                            <div class=" w-[80%] md:w-[554px] h-auto relative flex flex-col gap-4 xl:gap-7" data-aos="fade-left"
+                            data-aos-duration="1000"
+                            data-aos-delay="200">
                                 <h3 class="text-[32px] text-white thin_stroke collage_font">get some <span class="text-[#A0FF00]">eth</span></h3>
                                 <p class="w-full text-[18px] lg:text-[22px]">have ETH in your wallet to switch to $MPGA. If you don’t have any ETH, you can buy directly on metamask, transfer from another wallet, or buy on another exchange and send it to your wallet.</p>
                             </div>
@@ -416,7 +432,9 @@
 
                         <img src="./assets/images/how3.png" alt="howto" class="w-[40%] md:w-[200px] h-auto object-contain">
 
-                        <div class=" w-[80%] md:w-[554px] h-auto relative flex flex-col gap-4 xl:gap-7">
+                        <div class=" w-[80%] md:w-[554px] h-auto relative flex flex-col gap-4 xl:gap-7" data-aos="fade-left"
+                        data-aos-duration="1000"
+                        data-aos-delay="200">
                             <h3 class="text-[32px] text-white thin_stroke collage_font">Go to <span class="text-[#A0FF00]">Uniswap</span></h3>
                             <p class="w-full text-[18px] lg:text-[22px]">Connect to Uniswap. Go to app.uniswap.org in google chrome or on the browser inside your Metamask app. Connect your wallet. Paste the $MPGA token address into Uniswap, select MPGA, and confirm.</p>
                         </div>
@@ -431,7 +449,9 @@
 
                         <img src="./assets/images/how4.png" alt="howto" class="w-[40%] md:w-[200px] h-auto object-contain">
 
-                        <div class=" w-[80%] md:w-[554px] h-auto relative flex flex-col gap-4 xl:gap-7">
+                        <div class=" w-[80%] md:w-[554px] h-auto relative flex flex-col gap-4 xl:gap-7" data-aos="fade-left"
+                        data-aos-duration="1000"
+                        data-aos-delay="200">
                             <h3 class="text-[32px] text-white thin_stroke collage_font">Switch ETH for <span class="text-[#A0FF00]">$mpga</span></h3>
                             <p class="w-full text-[18px] lg:text-[22px]">switch ETH for $MPGA. We have ZERO taxes so you don’t need to worry about buying with a specific slippage, although you may need to use slippage during times of market volatility.</p>
                         </div>
@@ -449,9 +469,13 @@
                     <img src="./assets/images/texture.png" alt="" class="w-full h-full object-cover opacity-5">
                 </div>
 
-                <h1 class="text-[67px] text-white bold_stroke collage_font">Socials</h1>
+                <h1 class="text-[67px] text-white bold_stroke collage_font" data-aos="fade-up"
+                data-aos-duration="1000"
+                data-aos-delay="200">Socials</h1>
 
-                <div class="social flex items-center relative  gap-[1rem]">
+                <div class="social flex items-center relative  gap-[1rem]" data-aos="fade-up"
+                data-aos-duration="1000"
+                data-aos-delay="400">
                     <a href="#twitter" class="rounded-full border-[1px] border-[#FFFFFF4D]  w-[70px] h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
                         <img src="./assets/images/twitterIcon.svg" alt="twitterIcon" class="w-[50%] h-auto object-contain">
                     </a>
@@ -460,7 +484,9 @@
                     </a>
                 </div> 
 
-                <p class="text-[#B8BFBA] xl:w-[966px] text-[18px] md:text-[22px]">
+                <p class="text-[#B8BFBA] xl:w-[966px] text-[18px] md:text-[22px]" data-aos="fade-up"
+                data-aos-duration="1000"
+                data-aos-delay="500">
                     $MPGA has no association with Matt Furie or his creation Pepe the Frog. This token is simply paying homage to a meme 
                 </p>
 
