--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                      data-aos-duration="1000"
                      data-aos-delay="400">
 
-                     <div class=" absolute bottom-[-28vw] md:bottom-[-17%]" data-aos="fade-up"
+                     <div class="absolute w-full bottom-[-28vw] md:bottom-[-17%] flex justify-center" data-aos="fade-up"
                      data-aos-duration="1000"
                      data-aos-delay="200">
                         <img src="./assets/images/how_to_buy_img.png" alt="how_to_buy" class="relative w-[70%] xl:w-[840px] zoom_outIn_image " >
