--- a/index.html
+++ b/index.html
@@ -20,36 +20,7 @@
 
 
     <style>
-       .zoom_outIn{
-         animation:zoom_outIn 20s infinite linear;
-       }
-
-       .zoom_outIn_image{
-         animation:zoom_outIn_image 30s infinite linear;
-       }
-    
-       @keyframes zoom_outIn {
-        0%,100%{
-            transform: scale(1);
-        } 
-        50%{
-            transform: scale(1.4);
-        } 
-       }
-    
-       @keyframes zoom_outIn_image {
-        0%,100%{
-            transform: scale(1);
-        } 
-        50%{
-            transform: scale(1.1);
-        } 
-       }
-
-       .hover_rotateBtn:hover{
-        transform: rotate(380deg);
-       }
-
+ 
     </style>
  
     <div class="w-full min-h-[100vh] h-auto bg-[#061B35] max-w-[100%] absolute overflow-hidden">
@@ -103,10 +74,10 @@
                 data-aos-delay="200">
 
                 <div class="social flex items-center relative  gap-[1rem]">
-                    <a href="#twitter" class="rounded-full border-[1px] border-[#FFFFFF4D] w-[40px] md:w-[55px] lg:w-[70px] h-[40px] md:h-[55px] lg:h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
+                    <a href="https://x.com/home" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D] w-[40px] md:w-[55px] lg:w-[70px] h-[40px] md:h-[55px] lg:h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
                         <img src="./assets/images/twitterIcon.svg" alt="twitterIcon" class="w-[50%] h-auto object-contain">
                     </a>
-                    <a href="#telegram" class="rounded-full border-[1px] border-[#FFFFFF4D] w-[40px] md:w-[55px] lg:w-[70px] h-[40px] md:h-[55px] lg:h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
+                    <a href="https://telegram.org/" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D] w-[40px] md:w-[55px] lg:w-[70px] h-[40px] md:h-[55px] lg:h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
                         <img src="./assets/images/telegramIcon.svg" alt="telegramIcon" class="w-[50%] h-auto object-contain">
                     </a>
                 </div> 
@@ -189,7 +160,7 @@
                         <div class="relative" data-aos="fade-right"
                         data-aos-duration="1000"
                         data-aos-delay="600">
-                            <a target="_blank" href="#"
+                            <a href="#"
                             class="duration-300 hover:scale-110 relative bg-[#A4FF0A] w-[150px] h-[50px] md:w-[196px] md:h-[77px] min-[1600px]:w-[246px] min-[1600px]:h-[87px] rounded-full max-xl:mx-auto flex items-center justify-center">
                             <p class="text-center text-black font-[700] md:text-[22px] ">BUY NOW</p>
                         </a>
@@ -273,7 +244,7 @@
                       <div class="relative" data-aos="fade-left"
                       data-aos-duration="1000"
                       data-aos-delay="600">
-                        <a target="_blank" href="#"
+                        <a href="#"
                         class="duration-300 hover:scale-110 relative bg-[#A4FF0A] w-[150px] h-[50px] md:w-[196px] md:h-[77px] min-[1600px]:w-[246px] min-[1600px]:h-[87px] rounded-full flex items-center justify-center">
                         <p class="text-center text-black font-[700] md:text-[22px] ">BUY NOW</p>
                     </a>
@@ -476,10 +447,10 @@
                 <div class="social flex items-center relative  gap-[1rem]" data-aos="fade-up"
                 data-aos-duration="1000"
                 data-aos-delay="400">
-                    <a href="#twitter" class="rounded-full border-[1px] border-[#FFFFFF4D]  w-[70px] h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
+                    <a href="https://x.com/home" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D]  w-[70px] h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
                         <img src="./assets/images/twitterIcon.svg" alt="twitterIcon" class="w-[50%] h-auto object-contain">
                     </a>
-                    <a href="#telegram" class="rounded-full border-[1px] border-[#FFFFFF4D]  w-[70px] h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
+                    <a href="https://telegram.org/" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D]  w-[70px] h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
                         <img src="./assets/images/telegramIcon.svg" alt="telegramIcon" class="w-[50%] h-auto object-contain">
                     </a>
                 </div> 
