--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                 data-aos-delay="200">
 
                 <div class="social flex items-center relative  gap-[1rem]">
-                    <a href="https://x.com/home" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D] w-[40px] md:w-[55px] lg:w-[70px] h-[40px] md:h-[55px] lg:h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
-                        <img src="./assets/images/twitterIcon.svg" alt="twitterIcon" class="w-[50%] h-auto object-contain">
+                    <a href="https://x.com/home" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D] w-[40px] md:w-[55px] lg:w-[70px] h-[40px] md:h-[55px] lg:h-[70px] flex justify-center items-center duration-300 ease-in  hover:scale-110">
+                        <img src="./assets/images/twitterIcon.svg" alt="twitterIcon" class="w-[50%] h-auto object-contain hover_rotateBtn duration-200">
                     </a>
-                    <a href="https://telegram.org/" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D] w-[40px] md:w-[55px] lg:w-[70px] h-[40px] md:h-[55px] lg:h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
-                        <img src="./assets/images/telegramIcon.svg" alt="telegramIcon" class="w-[50%] h-auto object-contain">
+                    <a href="https://telegram.org/" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D] w-[40px] md:w-[55px] lg:w-[70px] h-[40px] md:h-[55px] lg:h-[70px] flex justify-center items-center duration-300 ease-in  hover:scale-110">
+                        <img src="./assets/images/telegramIcon.svg" alt="telegramIcon" class="w-[50%] h-auto object-contain hover_rotateBtn duration-200">
                     </a>
                 </div> 
 
@@ -447,11 +447,11 @@
                 <div class="social flex items-center relative  gap-[1rem]" data-aos="fade-up"
                 data-aos-duration="1000"
                 data-aos-delay="400">
-                    <a href="https://x.com/home" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D]  w-[70px] h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
-                        <img src="./assets/images/twitterIcon.svg" alt="twitterIcon" class="w-[50%] h-auto object-contain">
+                    <a href="https://x.com/home" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D]  w-[70px] h-[70px] flex justify-center items-center duration-300 ease-in  hover:scale-110">
+                        <img src="./assets/images/twitterIcon.svg" alt="twitterIcon" class="w-[50%] h-auto object-contain hover_rotateBtn duration-200">
                     </a>
-                    <a href="https://telegram.org/" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D]  w-[70px] h-[70px] flex justify-center items-center duration-300 ease-in hover_rotateBtn">
-                        <img src="./assets/images/telegramIcon.svg" alt="telegramIcon" class="w-[50%] h-auto object-contain">
+                    <a href="https://telegram.org/" target="_blank" class="rounded-full border-[1px] border-[#FFFFFF4D]  w-[70px] h-[70px] flex justify-center items-center duration-300 ease-in  hover:scale-110">
+                        <img src="./assets/images/telegramIcon.svg" alt="telegramIcon" class="w-[50%] h-auto object-contain hover_rotateBtn duration-200">
                     </a>
                 </div> 
 
