--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 <body> 
 
 
-    <style>
-      .feature:hover img{
-        transform: scale(1.1);
-      }
+    <style> 
     </style>
  
     <div class="w-full min-h-[100vh] h-auto bg-[#FF3BB9] max-w-[100%] absolute overflow-hidden">
@@ -257,9 +254,9 @@
              <section id="tokenomics" class="w-full h-[850px] md:h-[900px] bg-[#008000] flex_center relative z-10">
 
                  <!-- border -->
-                 <img src="./assets/images/top_token.svg" alt="" class="absolute left-[-5%] top-[-10px] lg:top-[-50px] min-w-[1000px] lg:min-w-[2500px] min-[3000px]:min-w-[10000px] w-[150vw] object-cover">
+                 <!-- <img src="./assets/images/top_token.svg" alt="" class="absolute left-[-5%] top-[-10px] lg:top-[-50px] min-w-[1000px] lg:min-w-[2500px] min-[3000px]:min-w-[10000px] w-[150vw] object-cover"> -->
 
-                 <img src="./assets/images/bottom_token.svg" alt="" class="absolute left-[-5%] bottom-[-10px] lg:bottom-[-50px] min-w-[1000px] lg:min-w-[2500px] min-[3000px]:min-w-[10000px] w-[150vw] object-cover">
+                 <img src="./assets/images/bottom_token.svg" alt="" class="absolute left-[-5%] bottom-[-10px] lg:bottom-[-50px] min-w-[1000px] lg:min-w-[3200px] min-[3000px]:min-w-[10000px] w-[150vw] object-cover">
 
                 <!-- bg -->
                  <img src="./assets/images/bg_token1.svg" alt="" class="absolute left-[-200px] top-0 w-[500px] object-contain h-auto">
@@ -301,7 +298,7 @@
              </section>
 
              <!-- roadmap -->
-              <section id="roadmap" class="bg-[#2FB926] relative h-[1750px] lg:h-[1100px] pt-[5rem] lg:pt-[10em] flex items-center flex-col">
+              <section id="roadmap" class="bg-[#2FB926] relative h-[1750px] lg:h-[1100px] pt-[5rem] lg:pt-[10em] flex items-center flex-col z-[5]">
                 
                 <!-- title -->
                 <h1 class="text-white bold_stroke_roadmap text-center text-[60px] lg:text-[120px]">ROADMAP</h1>
@@ -396,7 +393,7 @@
               </section>
 
               <!-- footer -->
-               <footer class="w-full h-[250px] relative bg-[#008000] flex_center ">
+               <footer class="w-full h-[250px] relative bg-[#008000] flex_center z-10">
                    <!-- bg --> 
                     <img src="./assets/images/bg_footer.svg" alt="" class="absolute left-[-1%] top-[-10vw] md:top-[-160px] min-w-[105vw] w-[110vw]  object-cover">
 
