--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
               </section>
 
               <!-- footer -->
-               <footer class="w-full h-[250px] relative bg-[#008000] flex_center z-10">
+               <footer class="w-full h-[350px] lg:h-[250px] relative bg-[#008000] flex_center z-10">
 
                    <!-- bg --> 
                     <img src="./assets/images/bg_footer.svg" alt="" class="absolute left-[-1%] top-[-10vw] md:top-[-160px] min-w-[105vw] w-[110vw]  object-cover">
