--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <a href="https://telegram.org/" target="_blank" class="w-[40px] md:w-[55px] lg:w-[56.35px] h-[40px] md:h-[55px] lg:h-[56.35px] flex justify-center items-center duration-300 ease-in  hover:scale-110">
                             <img src="./assets/images/telegram_nav.svg" alt="telegramIcon" class="w-full h-auto object-contain duration-200">
                         </a>
-                        <a href="https://telegram.org/" target="_blank" class="w-[40px] md:w-[55px] lg:w-[56.35px] h-[40px] md:h-[55px] lg:h-[56.35px] flex justify-center items-center duration-300 ease-in  hover:scale-110">
+                        <a href="https://solana.com/" target="_blank" class="w-[40px] md:w-[55px] lg:w-[56.35px] h-[40px] md:h-[55px] lg:h-[56.35px] flex justify-center items-center duration-300 ease-in  hover:scale-110">
                             <img src="./assets/images/sols_nav.svg" alt="telegramIcon" class="w-full h-auto object-contain duration-200">
                         </a>
                     </div> 
@@ -467,7 +467,7 @@
                             <a href="https://telegram.org/" target="_blank" class="w-[40px] md:w-[55px] lg:w-[56.35px] h-[40px] md:h-[55px] lg:h-[56.35px] flex justify-center items-center duration-300 ease-in  hover:scale-110">
                                 <img src="./assets/images/telegram_footer.svg" alt="telegramIcon" class="w-full h-auto object-contain duration-200">
                             </a>
-                            <a href="https://telegram.org/" target="_blank" class="w-[40px] md:w-[55px] lg:w-[56.35px] h-[40px] md:h-[55px] lg:h-[56.35px] flex justify-center items-center duration-300 ease-in  hover:scale-110">
+                            <a href="https://solana.com/" target="_blank" class="w-[40px] md:w-[55px] lg:w-[56.35px] h-[40px] md:h-[55px] lg:h-[56.35px] flex justify-center items-center duration-300 ease-in  hover:scale-110">
                                 <img src="./assets/images/solscan_footer.svg" alt="telegramIcon" class="w-full h-auto object-contain duration-200">
                             </a>
                         </div>
