--- a/index.html
+++ b/index.html
@@ -239,27 +239,28 @@
                            <!-- feature -->
                       <div class="w-[80%] relative flex flex-col items-end mt-[1rem] lg:mt-[4rem] min-[1900px]:mt-[10em]">
 
-                        <div class="w-[80%] min-[1000px]:w-[50%] min-[1500px]:w-[60%] flex_col gap-[1rem]">
+                        <div class="w-[80%] min-[1000px]:w-[68%] min-[1500px]:w-[60%] flex_col gap-[1rem]">
 
                             <h2 class="medium_stroke text-white text-[8vw] leading-[1] md:text-[40px] xl:text-[110px] min-[1500px]:text-[120px]" data-aos="fade-up"
                             data-aos-duration="800"
                             data-aos-delay="500">Featured on</h2>
                             
-                            <div class="w-full flex_align_center gap-[.5rem] lg:gap-[1.5rem] flex-wrap" data-aos="fade-left"
+                            <div class="w-full flex_align_center gap-[.5rem] lg:gap-[1.5rem] flex-wrap  " data-aos="fade-left"
                             data-aos-duration="800"
                             data-aos-delay="600">
                                 <a href="https://www.dextools.io/" target="_blank" class="relative cursor-pointer feature">
-                                    <img src="./assets/images/dex.png" alt="" class="h-[25px] lg:h-[55px] w-auto object-contain duration-200">
+                                    <img src="./assets/images/dex.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
+                                </a>
+                                <a href="https://dexscreener.com/" target="_blank" class="relative cursor-pointer feature">
+                                    <img src="./assets/images/dexscreen.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
                                 </a>
                                 <a href="https://www.dextools.io/" target="_blank" class="relative cursor-pointer feature">
-                                    <img src="./assets/images/coinmarket.png" alt="" class="h-[25px] lg:h-[55px] w-auto object-contain duration-200">
+                                    <img src="./assets/images/coinmarket.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
                                 </a>
                                 <a href="https://www.dextools.io/" target="_blank" class="relative cursor-pointer feature">
-                                    <img src="./assets/images/gotbit.png" alt="" class="h-[25px] lg:h-[55px] w-auto object-contain duration-200">
+                                    <img src="./assets/images/gotbit.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
                                 </a>
-                                <a href="https://www.dextools.io/" target="_blank" class="relative cursor-pointer feature">
-                                    <img src="./assets/images/dexscreen.png" alt="" class="h-[25px] lg:h-[55px] w-auto object-contain duration-200">
-                                </a>
+                           
                             </div>
                         </div>
 
