--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
                                 <a href="https://dexscreener.com/" target="_blank" class="relative cursor-pointer feature">
                                     <img src="./assets/images/dexscreen.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
                                 </a>
-                                <a href="https://www.dextools.io/" target="_blank" class="relative cursor-pointer feature">
+                                <a href="https://coinmarketcap.com/" target="_blank" class="relative cursor-pointer feature">
                                     <img src="./assets/images/coinmarket.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
                                 </a>
-                                <a href="https://www.dextools.io/" target="_blank" class="relative cursor-pointer feature">
-                                    <img src="./assets/images/gotbit.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
+                                <a href="https://www.coingecko.com/" target="_blank" class="relative cursor-pointer feature">
+                                    <img src="./assets/images/coinGecko.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
                                 </a>
                            
                             </div>
