--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
                         <div class="w-[80%] min-[1000px]:w-[68%] min-[1500px]:w-[60%] flex_col gap-[1rem]">
 
-                            <h2 class="medium_stroke text-white text-[8vw] leading-[1] md:text-[40px] xl:text-[110px] min-[1500px]:text-[120px]" data-aos="fade-up"
+                            <h2 class="medium_stroke text-white text-[8vw] leading-[1] md:text-[60px] xl:text-[110px] min-[1500px]:text-[120px]" data-aos="fade-up"
                             data-aos-duration="800"
                             data-aos-delay="500">Featured on</h2>
                             
@@ -249,16 +249,16 @@
                             data-aos-duration="800"
                             data-aos-delay="600">
                                 <a href="https://www.dextools.io/" target="_blank" class="relative cursor-pointer feature">
-                                    <img src="./assets/images/dex.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
+                                    <img src="./assets/images/dex.png" alt="" class="h-[25px] md:h-[60px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
                                 </a>
                                 <a href="https://dexscreener.com/" target="_blank" class="relative cursor-pointer feature">
-                                    <img src="./assets/images/dexscreen.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
+                                    <img src="./assets/images/dexscreen.png" alt="" class="h-[25px] md:h-[60px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
                                 </a>
                                 <a href="https://coinmarketcap.com/" target="_blank" class="relative cursor-pointer feature">
-                                    <img src="./assets/images/coinmarket.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
+                                    <img src="./assets/images/coinmarket.png" alt="" class="h-[25px] md:h-[60px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
                                 </a>
                                 <a href="https://www.coingecko.com/" target="_blank" class="relative cursor-pointer feature">
-                                    <img src="./assets/images/coinGecko.png" alt="" class="h-[25px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
+                                    <img src="./assets/images/coinGecko.png" alt="" class="h-[25px] md:h-[60px] lg:h-[55px] min-[1500px]:h-[60px] w-auto object-contain duration-200">
                                 </a>
                            
                             </div>
