--- a/index.html
+++ b/index.html
@@ -301,13 +301,13 @@
                         <div class="flex flex-col mt-[1.5rem] lg:mt-[2rem] gap-[1rem] text-[#F3F3F3] text-[16px] lg:text-[39.48px] max-w-[90%] w-[338.51px] max-[1000px]:mx-auto">
                             <p data-aos="fade-right"
                             data-aos-duration="800"
-                            data-aos-delay="270">40% liquidity</p>
+                            data-aos-delay="300">40% liquidity</p>
                             <span class="w-full h-auto relative">
                                 <img src="./assets/images/lines.svg" alt="" class="w-full h-auto object-cover">
                             </span>
                             <p data-aos="fade-right"
                             data-aos-duration="800"
-                            data-aos-delay="330">40% airdrop</p>
+                            data-aos-delay="400">40% airdrop</p>
                             <span class="w-full h-auto relative">
                                 <img src="./assets/images/lines.svg" alt="" class="w-full h-auto object-cover">
                             </span>
@@ -427,12 +427,17 @@
                   <!-- background -->
                    <div class="w-full flex_center h-[50%] absolute bottom-0 z-0 left-0">
 
-                    <img src="./assets/images/bg_roadmap1.svg" alt="" class="absolute bottom-[-10px] lg:bottom-[-190px] w-[150px] lg:w-[400px] h-auto object-contain">
+                    <img src="./assets/images/bg_roadmap1.svg" alt="" class="absolute bottom-[-10px] lg:bottom-[-190px] w-[150px] lg:w-[400px] h-auto object-contain zoom_outIn">
 
-                    <div class="absolute left-[-50px] lg:left-[-100px] bottom-[-70px] lg:bottom-[-130px] w-[200px] lg:w-[500px] h-[250px] lg:h-[500px] object-contain">
+                    <div class="absolute left-[-50px] lg:left-[-100px] bottom-[-70px] lg:bottom-[-130px] w-[200px] lg:w-[500px] h-[250px] lg:h-[500px] object-contain" data-aos="fade-up"
+                    data-aos-duration="800"
+                    data-aos-delay="200">
                         <img src="./assets/images/rooadmap1.png" alt="roadmap1" class="absolute w-full h-auto float_animation">
                     </div>
-                    <div class="absolute right-[-50px] lg:right-[-100px] bottom-[-70px] lg:bottom-[-120px] w-[200px] lg:w-[500px] h-[240px] lg:h-[475px]">
+
+                    <div class="absolute right-[-50px] lg:right-[-100px] bottom-[-70px] lg:bottom-[-120px] w-[200px] lg:w-[500px] h-[240px] lg:h-[475px]" data-aos="fade-up"
+                    data-aos-duration="800"
+                    data-aos-delay="400">
                         <img src="./assets/images/rooadmap2.png" alt="" class="absolute w-full h-auto object-contain float_animation" style="animation-delay: -4s;">
                     </div>
 
