--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <section id="home" class="home w-full h-auto relative flex items-center">
 
                 <!-- background -->
-                <div class="bg-image imagehome w-full h-full absolute left-[50%] translate-x-[-50%] top-0 flex justify-center items-center z-[0] max-w-[1950px]"> 
+                <div class="bg-image imagehome w-full h-full absolute left-[50%] translate-x-[-50%] top-0 flex justify-center items-center z-[0] max-w-[1900px]"> 
                     
                     <!-- hero img -->
                      <img src="./assets/images/hero_bg1.svg" alt="" class="absolute left-0 top-0 w-full xl:w-[50%] h-auto object-contain">
@@ -131,7 +131,7 @@
                      <img src="./assets/images/hero_bg2.svg" alt="" class="absolute left-[-10%] bottom-[-20%] max-w-[900px] w-[70%] xl:w-[40%] h-auto object-contain">
 
                     <!-- rotate image -->
-                    <div class="absolute w-[100vw] md:w-[1000px] h-[100vw] md:h-[1000px] object-contain z-10 top-[50%] xl:top-0 xl:right-[-10%]" data-aos="zoom-in"
+                    <div class="absolute w-[100vw] md:w-[1000px] h-[100vw] md:h-[1000px] object-contain z-10 top-[50%] xl:top-0 xl:right-[-10%] min-[2000px]:right-[-5%]" data-aos="zoom-in"
                     data-aos-duration="1000"
                     data-aos-delay="1000">
                         <img src="./assets/images/rotate_img.svg" alt="" class="absolute  w-full h-full rotate_animation">
@@ -177,8 +177,8 @@
                     </div>
 
                     <!-- image hero -->
-                    <div class="right relative xl:absolute bottom-0 right-0 w-full max-[1000px]:mt-[2rem] xl:w-[763px] flex justify-center">
-                        <img src="./assets/images/hero-img.png" alt="popo" class="max-w-[100%] w-[60%] md:w-[600px] bottom-0 relative xl:absolute h-auto object-cover" data-aos="fade-up"
+                    <div class="right relative xl:absolute bottom-0 right-0 w-full max-[1000px]:mt-[2rem] xl:w-[763px] flex justify-center float_animation">
+                        <img src="./assets/images/hero-img.png" alt="popo" class="max-w-[100%] w-[60%] md:w-[600px] bottom-[-40px] relative xl:absolute h-auto object-cover" data-aos="fade-up"
                         data-aos-duration="1000"
                         data-aos-delay="600">
                     </div>
