--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                     <!-- image hero -->
                     <div class="right relative xl:absolute bottom-0 right-0 w-full max-[1000px]:mt-[2rem] xl:w-[763px] flex justify-center float_animation">
-                        <img src="./assets/images/hero-img.png" alt="popo" class="max-w-[100%] w-[60%] md:w-[600px] bottom-[-40px] relative xl:absolute h-auto object-cover" data-aos="fade-up"
+                        <img src="./assets/images/hero-img.png" alt="popo" class="max-w-[100%] w-[60%] md:w-[600px] bottom-[-20px] xl:bottom-[-40px] relative xl:absolute h-auto object-cover" data-aos="fade-up"
                         data-aos-duration="1000"
                         data-aos-delay="600">
                     </div>
