--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         data-aos-duration="800"
                         data-aos-delay="200">About</h1>
 
-                        <div class="text-center w-[80%] text-[11px] md:text-[19px] min-[1600px]:text-[28px] capitalize text-[#5C5154] flex_col gap-[.5rem] lg:gap-[2rem] text_bold_grey max-lg:tracking-widest">
+                        <div class="text-center w-[80%] max-[400px]:text-[9px] text-[11px] md:text-[19px] min-[1600px]:text-[28px] capitalize text-[#5C5154] flex_col gap-[.5rem] lg:gap-[2rem] text_bold_grey max-lg:tracking-widest">
                             <p class="w-full" data-aos="fade-up"
                             data-aos-duration="800"
                             data-aos-delay="300">
